2022-04-01 0.22
  * added option --save-configuration: format and
    save configuration file
  * added support for external index database engines
    MariaDB, PostgreSQL
  * added optional move-to in persistence
  * use threads pools for client connections+worker
    threads
  * added option --test-created-archives
  * added option --sparse
  * added begin/end time for continous schedules
  * place pid file into /run by default
  * fixed reading cryption keys via config file
  * fixed CD/DVD/BD blank command: use
    "dvd+rw-format -force" to create medium in
    restricted overwrite mode
  * parallel restore
  * use thread-pool
  * execute pre/post command for BAR in non-server mode,
    too
  * create log file in non-server mode if command line
    option --log-file is specified
  * rename archives: use an increasing number suffix
  * upgrade bzip2 1.0.8
  * upgrade MMXL 3.2
  * upgrade zStandard 1.4.8
  * upgrade gpp-error 1.41
  * upgrade gcrypt 1.8.7
  * upgrade nettle 3.7
  * upgrade gmp 6.2.1
  * upgrade libidn2 2.3.0
  * upgrade GnuTLS 3.7.0
  * upgrade libicon 1.16
  * upgrade OpenSSL 1.1.1i
  * upgrade c-areas 1.17.1
  * upgrade curl 7.74.0
  * upgrade pcre 8.44
  * upgrade SQLite 3.34
  * upgrade binutils 2.35
  * fix abort restore job if client connection is lost
  * renamed bar-sqlite3 to bar-index and support MariaDB
    and PostgreSQL
  * fixed parsing permissions, fixed set permissions on
    restore
  * BARControl: added create directory/delete file in
    file requester
  * BARControl: fixed display of entry progress: count
    done+error+skipped
  * BARControl: fixed closing tooltips
  * BARControl: fixed initial values for a new job
  * BARControl: fixed goto parent directory in file
    requester
  * BARControl: fixed storage of table columns width
  * extended documentation by "term of use"

2020-09-27 0.21f
  * fixed auto-index of new archives
  * BARControl: synchonous update of job data

2020-08-28 0.21e